<resources>
    <string name="app_name">Mahasiswa</string>
    <string name="data">Isi Data Mahasiswa</string>
    <string name="namaLengkap">Nama Lengkap</string>
    <string name="nim">NIM</string>
    <string name="kelas">Kelas</string>
    <string name="nilai1">Nilai Semester 1</string>
    <string name="nilai2">Nilai Semester 2</string>
    <string name="tambah">Tambah</string>
    <string name="lihat">Daftar Mahasiswa</string>
    <string name="nama_mhs">Nama : %1$s</string>
    <string name="nim_mhs">NIM : %1$s</string>
    <string name="kelas_mhs">Kelas : %1$s</string>
    <string name="nilai_mhs">Nilai rata-rata : %1$.2f</string>
    <string name="nama_invalid">Nama tidak boleh kosong.</string>
    <string name="nim_invalid">NIM tidak boleh kosong.</string>
    <string name="kelas_invalid">Kelas tidak boleh kosong.</string>
    <string name="nilai1_invalid">Nilai semester 1 tidak boleh kosong.</string>
    <string name="nilai2_invalid">Nilai semester 2 tidak boleh kosong.</string>
    <string name="copyright">Aplikasi ini digunakan untuk menyimpan list data mahasiswa. Dimana data
        tersebut terdiri dari nama lengkap, NIM, dan kelas dari mahasiswa. </string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Nama Lengkap :  %1$s\nNIM :  %2$s\nKelas :  %3$s</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data dosen otomatis</string>
    <string name="notif_title">Ada dosen baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
    <string name="koneksi_error">Koneksi error</string>
</resources>